Redone using co-routines (at last).
This is where I wanted to be a long time ago.